# serializer version: 1
# name: test_validation_batch_empty_list
  dict({
    'body': dict({
      'profile_ids': 'not-a-list',
    }),
    'detail': list([
      dict({
        'input': 'not-a-list',
        'loc': list([
          'body',
          'profile_ids',
        ]),
        'msg': 'Input should be a valid list',
        'type': 'list_type',
      }),
    ]),
  })
# ---
# name: test_validation_invalid_types
  dict({
    'body': dict({
      'display_name': 12345,
      'is_active': 'not-a-bool',
    }),
    'detail': list([
      dict({
        'input': 12345,
        'loc': list([
          'body',
          'display_name',
        ]),
        'msg': 'Input should be a valid string',
        'type': 'string_type',
      }),
      dict({
        'input': 'not-a-bool',
        'loc': list([
          'body',
          'is_active',
        ]),
        'msg': 'Input should be a valid boolean, unable to interpret input',
        'type': 'bool_parsing',
      }),
    ]),
  })
# ---
# name: test_validation_missing_fields
  dict({
    'body': dict({
    }),
    'detail': list([
      dict({
        'input': dict({
        }),
        'loc': list([
          'body',
          'display_name',
        ]),
        'msg': 'Field required',
        'type': 'missing',
      }),
    ]),
  })
# ---
